Revert "Google_auth"
This reverts commit d22783b71f6d7683936844e57fb1e1da593f2031, reversing
changes made to 67a9eba3bfb38f127e1d30d0cb7e1b2f333ab349.

--- a/server/.env
+++ b/server/.env
@@ -1,2 +1,2 @@
-MONGO = //
-JWT= //
+MONGO = mongodb+srv://kunjgupta:kunjgupta@cluster0.wrndupl.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+JWT= "ffvsdvsdggd"
